# pebbles-game

./: .binpath  Cargo.toml  README.md  build.rs
.github/workflows/: .ci.yml.swp  ci.yml
io/: Cargo.toml
io/src/: lib.rs
src/: lib.rs
tests/: basic.rs
